apps/trailarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: trailarr
  labels:
    app: trailarr
spec:
  selector:
    app: trailarr
  ports:
    - port: 7889
      targetPort: 7889
      name: http
