apps/trailarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trailarr
  labels:
    app: trailarr
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  rules:
    - host: trailarr.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: trailarr
                port:
                  number: 7889
